--- a/CSS/landing.scss
+++ b/CSS/landing.scss
@@ -170,15 +170,15 @@
                 align-items: center;
                 justify-content: flex-start;
                 background: black;
-                padding-left: 15px;
-                padding-right: 15px;
-                margin-right: 20px;
-                border-radius: 15px;
+                padding-left: 20px;
+                padding-right: 20px;
+                margin-right: 15px;
+                border-radius: 30px;
                 transition: 0.2s ease;
                 color: white;
                 svg{
-                    height: 30px;
-                    width: 30px;
+                    height: 25px;
+                    width: 25px;
                 }
                 h2{
                     font-size: $paragraph;
@@ -195,7 +195,6 @@
 
     .animation{
         margin: 0px;
-        margin-left: 100px;
         width: 280px;
         height: 560px;
         border-radius: 30px;
@@ -210,26 +209,26 @@
         display: flex;
         flex-direction: column;
         h1{
-            font-size: $header;
-            line-height: calc(#{$header} + 5px);
+            font-size: 38px;
+            line-height: 44px;
             margin: 0;
             .italic{
                 font-style: italic;
             }
         }
         p{
-            font-size: 20px;
-            line-height: 28px;
+            font-size: 18px;
+            line-height: 24px;
         }
         .button{
             background: $blue;
             margin-top: 10px;
             padding: 10px;
-            padding-left: 15px;
-            padding-right: 15px;
+            padding-left: 20px;
+            padding-right: 20px;
             font-size: $paragraph;
             font-weight: 400;
-            border-radius: 10px;
+            border-radius: 30px;
             width: fit-content;
             transition: 0.2s ease;
             color: white;
@@ -252,6 +251,10 @@
         box-shadow: 0 -30px 100px rgba($wolf, 0.2);
         z-index: 3;
 
+        .animation{
+            margin-left: 100px;
+        }
+
         &.first{
             background: none;
             z-index: 1;
@@ -261,6 +264,10 @@
             text-align: right;
             .expo{
                 align-items: flex-end;
+            }
+            .animation{
+                margin-left: 0;
+                margin-right: 100px;
             }
         }
 
