--- a/CSS/subpage.css
+++ b/CSS/subpage.css
@@ -64,21 +64,20 @@ body {
         -ms-flex-align: center;
             align-items: center;
     padding-top: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
   }
   .title h1 {
-    font-size: 50px;
+    font-size: 36px;
     line-height: calc(50px + 5px);
     font-weight: 700;
     margin: 0;
-    margin-bottom: 10px;
   }
   .title h1 span {
     font-style: italic;
   }
   .title h2 {
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 24px;
+    font-weight: 400;
     margin: 0;
     margin-bottom: 80px;
   }
@@ -87,6 +86,7 @@ body {
     height: 560px;
     background-color: white;
     border-radius: 15px;
+    display: none;
   }
   .title #animation.dark {
     background-color: #00041C;
@@ -105,7 +105,7 @@ body {
     height: 400px;
     -webkit-transition: 0.3s ease;
     transition: 0.3s ease;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
   .slide img {
     height: 100%;
@@ -116,21 +116,22 @@ body {
     max-width: 600px;
   }
   .slide .expo h2 {
-    font-size: 25px;
+    font-size: 20px;
+    margin: 0;
+    margin-bottom: 5px;
     font-weight: 500;
-    margin: 5px;
     color: #a0a0a0;
   }
   .slide .expo h1 {
-    font-size: 50px;
-    line-height: calc(50px + 5px);
+    font-size: 32px;
+    line-height: 40px;
     font-weight: 700;
     margin: 0;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   .slide .expo p {
-    font-size: 20px;
-    line-height: calc(20px + 7px);
+    font-size: 18px;
+    line-height: 24px;
     font-weight: 400;
     margin: 0;
     width: 90%;
